<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorsActivity">


    <TextView
        android:id="@+id/sensorListText"
        android:layout_width="312dp"
        android:layout_height="104dp"
        android:text="@string/sensor_list"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensorListText" />

    <LinearLayout
        android:layout_width="202dp"
        android:layout_height="382dp"
        android:gravity="center_horizontal|top|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensorListText">

        <Button
            android:id="@+id/accelerometerButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="selectSensor"
            android:scrollHorizontally="true"
            android:text="@string/accelerometer" />

        <Button
            android:id="@+id/gpsButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="selectSensor"
            android:text="@string/gps" />

        <Button
            android:id="@+id/gyroscopeButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="selectSensor"
            android:scrollHorizontally="true"
            android:text="@string/gyroscope" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>